# RA2YR_ReSource

./: .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  HOOK_SYSTEM_REVIEW.md  README.md  README_cn.md  Reverse_Engineering.md  Syringe.md  build_err.txt  build_output.txt  constraint_analysis.txt  constraint_inheritance_analysis.txt  contradictions.md  cpp_annotation_audit.json  evidence_trail_results.md  functionComparison.md  golden_set_results.md  golden_set_verification.md  ida_apply_types.py  masking_test_results.md  mismatch_pipeline_a.json  mismatch_pipeline_b.json  renaming_suggestions.json  session.md  suggested_types.json  tmp_WinMain.json  type_map.json
.github/workflows/: cmake-multi-platform.yml
.omo/: batch_decompile_infantry.py  boulder.json  debug_mcp.py  foot_cpp_impl.cpp  foot_hpp_add.txt  gen_implementations.py  rewrite_offsets.patch  summary_decompile.py  tech_cpp_add.txt  tech_hpp_add.txt  tmp_funcs.txt
.omo/evidence/: addr-comment-audit.txt  address-audit.txt  fr-task-1-baseline.txt  fr-task-10-surface.txt  fr-task-11-tactical.txt  fr-task-12-effects.txt  fr-task-13-objectcore.txt  fr-task-14-technofoot.txt  fr-task-15-building.txt  fr-task-16-infantryunit.txt  fr-task-17-combatai.txt  fr-task-18-networkini.txt  fr-task-19-globals.txt  fr-task-2-review.txt  fr-task-3-exclusions.txt  fr-task-4-dialog.txt  fr-task-5-menusupport.txt  fr-task-6-maincampaign.txt  fr-task-7-screens.txt  fr-task-8-uicomponents.txt  fr-task-9-menuglobals-progress.txt  fr-task-9-menuglobals.txt  menu_decompilations.json  (+27 more)
anchors/: global_types.json  member_types.json
app/: cmdline.cpp  cmdline.hpp  ddraw_init.cpp  game_loop.cpp  main.cpp
decompile-results/: Audio.md  COM.md  FileProcess.md  InGameLogic.md  Objects.md  RenderProcess.md  Reverse_Engineering.md  Workflow.md  gamemd.exe.asm  gamemd.exe.c  gamemd.exe.html  gamemd.exe.i64  gamemd.exe.map
docs/: coverage.md  ddraw_integration.md  dsurface.md  ecosystem.md  globals.md  isometric.md  menu_architecture.md  menu_lessons.md  mix_files.md  mutation-taxonomy.md  todo.md  voxel_format.md
include/: fundamentals.hpp
injectFunctionTest/: CMakeLists.txt  PostProcStub.asm  RunHeadlessTest.bat  add_markers.py  add_reverse_markers.py  analyze_idempotent.py  annotations.json  batch_impl_gen.py  batch_name_subs_ida.py  blit_tracker.cpp  callee_map.json  disable_all.py  disable_stubs.py  element_tracker.cpp  element_tracker.h  enable_all.py  fix_completed.py  fix_includes.py  gen_annotations.py  gen_re_impl.py  gen_reverse_hooks.py  headless_server.cpp  headless_server.h  hook_globals.cpp  hook_main.cpp  hook_template.hpp  ida_extract.py  ida_extract_phase3.py  ida_extract_purity.py  ida_gen_re_impl.py  idempotent_audit.txt  idempotent_results.json  log_format.h  mark_all_completed.py  mark_completed.py  only_fill.py  pipeline_test.py  render_hooks.cpp  render_hooks.h  revert_to_none.py  (+9 more)
injectFunctionTest/stub_override/gamemd/core/: reverse_marker.hpp
scripts/: bulk_rename.ps1  check_refs.py  class_hierarchy_order.json  classify_headers.py  completion_scorecard.json  convert_cpp.py  convert_headers.py  cross_ref_high.py  final_crossref.py  fix_all_includes.py  fix_all_now.py  fix_core_includes.py  fix_core_restore.py  fix_inc_includes.py  fix_includes.py  fix_members.py  fix_unconverted.py  gen_headers_plan.py  gen_manifest.py  gen_reverse_md.py  gen_scorecard.py  generate_final_report.py  header_classification.json  ida_baseline.json  ida_bulk_import_yrpp.py  ida_class_coverage.json  ida_class_coverage.txt  ida_import_rulesclass.py  ida_import_yrpp_phase2.py  ida_stats.py  ida_stats_v2.py  ida_sync_structs.py  rename_blit_pipeline.py  rename_bulk_pass2.py  rename_bulk_pass3.py  rename_bulk_pass4.py  rename_bulk_small.py  rename_jumpjet.py  rename_jumpjet_pass2.py  rename_jumpjet_pass3.py  (+5 more)
src/: fundamentals.hpp
tests/: bink_test.cpp
tools/: __init__.py  _analyze_names.py  _apply_hpp_annotations.py  _batch_compile_check.py  _build_final_renames.py  _check_annotated.py  _check_duplicates.py  _check_ida_results.py  _check_ida_results2.py  _check_queries.py  _check_translated.py  _dedup_and_check.py  _fix_renames.py  _gap2_collect_skips.py  _gap2_parse_lnk.py  _gap2_parse_lnk2.py  _gen_render_globals.py  _high_funcjson_updates.json  _high_hpp_annotations.json  _high_renames.json  _high_renames_dedup.json  _high_renames_final.json  _highs_extracted.json  _ida_batch_lookup.py  _ida_renames_final.json  _ida_substring_lookup.py  _mediums_extracted.json  _prepare_actions.py  _query_ida_names.py  _subs_errors.txt  _subs_errors2.txt  _subs_errors3.txt  _survey_globals.py  _survey_priority.py  _task17_clean.py  _task17_clean3.py  _task17_explore.py  _task17_explore2.py  _task17_hexdump.py  _task17_inspect.py  (+236 more)
tools/hook_framework/: CMakeLists.txt  PostProcStub.asm  codegen.py  headless_server.cpp  headless_server.h  hook_main.cpp  ida_extract.py  shadow_txn.cpp  shadow_veh.h  test_hooks.cpp
tools/hook_framework/build_hook/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hook_dll.vcxproj  hook_dll.vcxproj.filters  hook_framework.sln
tools/hook_framework/build_hook/Release/: hook_dll.exp  hook_dll.lib
tools/hook_framework/build_hook/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
tools/hook_framework/build_hook/Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
tools/hook_framework/build_hook/Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
tools/hook_framework/build_hook/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
tools/hook_framework/build_hook/hook_dll.dir/Release/: hook_dll.dll.recipe
tools/hook_framework/build_hook/hook_dll.dir/Release/hook_dll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
(+6660 files in other folders)
